--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch src/server.ts",
+    "dev": "tsx watch src/index.ts",
     "test:api": "tsx src/api/football-data/test-api.ts",
     "build": "tsc",
-    "start": "node dist/server.js"
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -17,13 +17,14 @@
     "axios": "^1.12.2",
     "dotenv": "^16.6.1",
     "express": "^5.1.0",
+    "grammy": "^1.38.3",
     "prisma": "^6.7.0",
     "zod": "^3.25.76"
   },
   "devDependencies": {
     "@eslint/js": "^9.26.0",
     "@types/express": "^5.0.1",
-    "@types/node": "^22.18.12",
+    "@types/node": "^22.18.13",
     "@vitest/ui": "^3.1.2",
     "eslint": "^9.26.0",
     "eslint-config-prettier": "^10.1.2",
