--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsx watch src/index.ts",
-    "test:api": "tsx src/api/football-data/test-api.ts",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest run --coverage",
     "build": "tsc",
     "start": "node dist/index.js"
   },
@@ -13,11 +16,14 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@google/genai": "^1.28.0",
+    "@grammyjs/i18n": "^1.1.2",
     "@prisma/client": "^6.7.0",
     "axios": "^1.12.2",
     "dotenv": "^16.6.1",
-    "express": "^5.1.0",
     "grammy": "^1.38.3",
+    "node-cron": "^4.2.1",
+    "pino": "^10.3.1",
     "prisma": "^6.7.0",
     "zod": "^3.25.76"
   },
@@ -25,12 +31,14 @@
     "@eslint/js": "^9.26.0",
     "@types/express": "^5.0.1",
     "@types/node": "^22.18.13",
+    "@types/node-cron": "^3.0.11",
+    "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "^3.1.2",
     "eslint": "^9.26.0",
     "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-prettier": "^5.3.1",
-    "eslint-plugin-react": "^7.37.5",
     "globals": "^16.0.0",
+    "pino-pretty": "^13.1.3",
     "prettier": "^3.5.3",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.4",
